--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -428,7 +428,9 @@
                               class="addr-button btn btn-outline-dark"
                               onclick="sample6_execDaumPostcode()"
                               value="주소찾기"
-                            ></button>
+                            >
+                              주소찾기
+                            </button>
                           </div>
                           <div class="form-floating mb-3 col-sm-6">
                             <input
