--- a/app/src/main/resources/static/register/patients-profile.html
+++ b/app/src/main/resources/static/register/patients-profile.html
@@ -524,7 +524,7 @@
                       <div class="text-center">
                         <button
                           type="button"
-                          class="btn btn-primary change-pw-btn"
+                          class="btn btn-outline-secondary change-pw-btn"
                         >
                           변경하기
                         </button>
