--- a/app/src/main/resources/static/register/AnA-admin.html
+++ b/app/src/main/resources/static/register/AnA-admin.html
@@ -34,8 +34,8 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top d-flex align-items-center">
+   <!-- ======= Header ======= -->
+   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="d-flex align-items-center justify-content-between">
       <a class="logo d-flex align-items-center">
         <!--  <img src="assets/img/newlogo.png" alt=""> -->
@@ -48,17 +48,20 @@
       <ul class="d-flex align-items-center">
         <li class="nav-item dropdown pe-3">
           <a
-            class="nav-link nav-profile d-flex align-items-center pe-0"           
+            class="nav-link nav-profile d-flex align-items-center pe-0"
+            href="patients-profile.html"
           >
-            <div id="pre-userimg"></div>
-             <span id="username" class="d-none d-md-block ps-2"></span>
+            <img
+              src="../assets/img/관리자이미지.png"
+              alt="Profile"
+              class="rounded-circle"
+            />
+            <span id="username" class="d-none d-md-block ps-2"></span>
           </a>
         </li>
       </ul>
     </nav>
   </header>
-  <!-- ======= Header ======= -->
-  
   <!-- ======= Sidebar ======= -->
   <aside id="sidebar" class="sidebar">
 
@@ -150,17 +153,15 @@
             scrollbar-width: none;
             /* 파이어폭스 */
           }
-
           .chat-cover {
-            width: 780px;
-            height: 750px;
-            margin-left: auto;
-            margin-right: auto;
-            box-sizing: border-box;
-           
-          }
+          width: 780px;
+          height: 750px;
+          box-sizing: border-box;
+          margin: 100px auto;
+         
+        }
 
-          .chats {
+        .chats {
             width: 100%;
             height: 85%;
             box-sizing: border-box;
@@ -198,8 +199,8 @@
           .chat-right div {
            width: 300px;
 		        float: right;
-		        background-color: white;
-		        border: 3px solid rgb(211, 235, 244);
+		        background-color: rgb(255, 229, 135);
+		        border: 3px solid  rgb(255, 229, 135);
 		      }
 		      #q-content{
 		        font-weight: bolder;
