의사 프로필, 회원가입 버튼 디자인 변경

--- a/app/src/main/resources/static/register/doctors-signup.html
+++ b/app/src/main/resources/static/register/doctors-signup.html
@@ -882,7 +882,7 @@
             <input type="text" placeholder="학력 사항" class="form-control career">
           </div>
           <div class="col-sm-1 btn-list">
-            <button type="button" class="btn btn-outline-danger btn-sm remove-degree-btn"> × </button>
+            <button type="button" class="btn btn-outline-danger btn-sm remove-degree-btn" style="width: 32px"> × </button>
           </div>
         `;
         registerDegreeList.appendChild(newRow);
