병원 등록 페이지 배율, 버튼 디자인 변경

--- a/app/src/main/resources/static/register/hospitals-input.html
+++ b/app/src/main/resources/static/register/hospitals-input.html
@@ -50,7 +50,7 @@
       <button
         type="button"
         id="0, "
-        class="btn btn-secondary col-sm-2"
+        class="btn btn-outline-secondary col-sm-2"
         onclick="setParentText(event)"
       >
         등록 취소
