--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -177,8 +177,8 @@
                 </div>
                 <br>
               <div class="text-center" id="uptdel-btns">
-                  <button type="button" id="update-btn" class="btn btn-primary ">변경</button>
-                  <button type="button" id="delete-btn" class="btn btn-primary ">삭제</button>
+                  <button type="button" id="update-btn" class="btn btn-outline-secondary ">변경</button>
+                  <button type="button" id="delete-btn" class="btn btn-outline-secondary ">삭제</button>
               </div>
                
 
@@ -230,7 +230,7 @@
                 <textarea class="form-control recomment"  id="floatingTextarea" style="height: 100px;" placeholder="댓글 입력"> </textarea>
               </div>
               <div class="text-center"  style="margin-top: 20px;" >
-                <button type="button" id="rec-save-btn" class="btn btn-secondary-outline ">댓글 저장</button>
+                <button type="button" id="rec-save-btn" class="btn btn-outline-secondary ">댓글 저장</button>
                 <button type="button" id="former-btn" class="btn btn-secondary">이전</button>
                <!-- <button type="button" id="rec-delete-btn" class="btn btn-primary ">삭제</button>  --> 
               </div>
