--- a/app/src/main/resources/static/register/index.html
+++ b/app/src/main/resources/static/register/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="body-cover">
-    <div class="body">
+    <div class="body carousel-dark">
 
       <div class="log-btns">
         <button type="button" class="btn btn-outline-secondary log-mypage" style="display: none;">마이 페이지</button>
