--- a/app/src/main/resources/static/register/tel-input.html
+++ b/app/src/main/resources/static/register/tel-input.html
@@ -79,6 +79,7 @@
   </div>
   <!-- JavaScript Bundle with Popper -->
   <!-- 사용자가 추가한 스크립트 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -150,15 +151,31 @@
         .then(data => {
           console.log(data)
           if (data.status == "success") {
-            
+            Swal.fire({
+              position: 'top-end',
+              icon: 'success',
+              title: '인증 완료되었습니다',
+              showConfirmButton: false,
+              timer: 500
+            })
+            setTimeout(() => {
+              setParentText();
+            }, 500);
             // alert("인증 되었습니다.")
-            setParentText()
           } else {
             if(data.data == "중복된 연락처") {
-              alert("중복된 연락처 입니다.")
-              exit();
+              Swal.fire({
+                position: 'top-end',
+                icon: 'error',
+                title: '이미 등록된 연락처 입니다',
+                showConfirmButton: false,
+                timer: 500
+              });
+              setTimeout(() => {
+                exit();
+              }, 500);
             }else {
-              $(".serial-btn").text("틀린 인증번호"); 
+              Swal.fire('틀린 인증번호');
             }
           }
         })
