커뮤니티 입력값 없을시 alert창

--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -9,6 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <link rel="stylesheet" href="sweetalert2.min.css">
   <!-- Favicons -->
   <link href="assets/img/newlogo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -288,6 +289,7 @@
   <script src="community-view.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
+  <script src="sweetalert2.all.min.js"></script>
 </body>
 
 </html>
