--- a/app/src/main/resources/static/register/doctors-community-main.html
+++ b/app/src/main/resources/static/register/doctors-community-main.html
@@ -287,7 +287,7 @@
   </section>
               <section class="section">
                 <div class="row">
-                  <div class="col-lg-12">
+                  <div class="col-lg-12" style="margin-bottom: 20px;">
                     <div class="card">
                       <div class="card-body">
                         <h5 class="card-title"><strong>커뮤니티 게시글 목록</strong></h5>
