--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -290,6 +290,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
   <script src="sweetalert2.all.min.js"></script>
+  <script src="sweetalert2.min.js"></script>
 </body>
 
 </html>
