회원가입 필수입력 값 표시 추가

--- a/app/src/main/resources/static/register/doctors-signup.html
+++ b/app/src/main/resources/static/register/doctors-signup.html
@@ -100,7 +100,7 @@
                         <label
                           for="id-input"
                           class="col-sm-2 form-label padding-right-0"
-                          >ID</label
+                          >ID<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <input
@@ -132,7 +132,7 @@
                         <label
                           for="password"
                           class="col-sm-2 form-label padding-right-0"
-                          >비밀번호</label
+                          >비밀번호<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <input
@@ -155,7 +155,7 @@
                         <label
                           for="confirmPassword"
                           class="col-sm-2 form-label padding-right-0"
-                          >비밀번호 확인</label
+                          >비밀번호 확인<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <input
@@ -175,7 +175,7 @@
                         <label
                           for="name"
                           class="col-sm-2 form-label padding-right-0"
-                          >이름</label
+                          >이름<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <input
@@ -192,7 +192,7 @@
                         <label
                           for="tel"
                           class="col-sm-2 form-label padding-right-0"
-                          >휴대폰번호</label
+                          >휴대폰번호<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <input
@@ -249,7 +249,7 @@
                         <label
                           for="birth"
                           class="col-sm-2 form-label padding-right-0"
-                          >생년월일</label
+                          >생년월일<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <input
@@ -266,7 +266,7 @@
                         <label
                           for="email-id"
                           class="col-sm-2 form-label padding-right-0"
-                          >이메일</label
+                          >이메일<span class="required">*</span></label
                         >
                         <div class="col-sm-3">
                           <input
@@ -305,7 +305,7 @@
 
                       <div class="row mb-3">
                         <label class="col-sm-2 form-label padding-right-0">
-                          성별
+                          성별<span class="required">*</span>
                         </label>
                         <div class="col-sm-5">
                           <div class="form-check form-check-inline">
@@ -340,7 +340,7 @@
                         <label
                           for="inputPostNo"
                           class="col-sm-2 form-label padding-right-0"
-                          >주소</label
+                          >주소<span class="required">*</span></label
                         >
                         <div class="col-sm-3">
                           <input
@@ -415,7 +415,7 @@
 
                       <div class="row mb-3">
                         <label class="col-sm-2 form-label padding-right-0"
-                          >자격</label
+                          >자격<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <select id="license" class="form-select" required>
@@ -437,7 +437,7 @@
 
                       <div class="row mb-3" id="license-file-row">
                         <label class="col-sm-2 form-label padding-right-0"
-                          >면허/자격</label
+                          >면허/자격<span class="required">*</span></label
                         >
                         <div class="col-sm-5">
                           <input
