4일 28일 작업내용 업로드

--- a/app/src/main/resources/static/auth/doctors-login.html
+++ b/app/src/main/resources/static/auth/doctors-login.html
@@ -99,6 +99,7 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/vendor/chart.js/chart.umd.js"></script>
@@ -171,14 +172,26 @@
           return response.json();
         })
         .then(result => {
+          console.log(result)
           if (result.status == 'success') {
             location.href = '../register/doctors-advices.html';
           } else {
             
-            if(result.data != null) {
-              alert('자격증 인증 안됨');
+            if(result.data == "licenseNONE") {
+              Swal.fire({
+                title: '자격증 인증 안됨',
+                width: 320,
+                height: 200
+              });
             }else {
-              alert('로그인 실패!');
+              Swal.fire({
+                icon: 'error',
+                title: '존재하지 않는 계정',
+                width: 400,
+                height: 320,
+                showConfirmButton: false,
+                timer: 750
+              });
             }
             document.querySelector('input[name="id"]').value = "";
             document.querySelector('input[name="password"]').value = "";
