--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -428,6 +428,7 @@
                               class="addr-button btn btn-outline-dark"
                               onclick="sample6_execDaumPostcode()"
                               value="주소찾기"
+                              style="text-align: center"
                             >
                               주소찾기
                             </button>
