회원가입 버튼 변경

--- a/app/src/main/resources/static/register/doctors-signup.html
+++ b/app/src/main/resources/static/register/doctors-signup.html
@@ -935,7 +935,7 @@
 
       // 회원가입 버튼 클릭
       document.getElementById('btn-insert').addEventListener('click', () => {
-        $('#btn-insert').prop('disabled', true);
+        // $('#btn-insert').prop('disabled', true);
         const form = document.getElementById('doctors-register-form');
         const formData = new FormData(form);
 
