--- a/app/src/main/resources/static/register/patients-signup.html
+++ b/app/src/main/resources/static/register/patients-signup.html
@@ -445,11 +445,10 @@
                           ></textarea>
                         </div>
                       </div>
-                      <div class="row mb-3">
+                      <div class="col-sm-5" style="margin-left:270px;">
                         <button
                           type="submit"
-                          class="btn btn-outline-secondary w-50"
-                          style="margin-left: 180px"
+                          class="btn btn-outline-secondary"
                           id="btn-insert"
                         >
                           가입 완료
@@ -712,7 +711,7 @@
 
       // 회원가입 버튼 클릭
       document.getElementById('btn-insert').addEventListener('click', () => {
-        $('#btn-insert').prop('disabled', true);
+        // $('#btn-insert').prop('disabled', true);
         const form = document.getElementById('patients-register-form');
         const formData = new FormData(form);
 
