--- a/app/src/main/resources/static/register/hospitals-input.html
+++ b/app/src/main/resources/static/register/hospitals-input.html
@@ -135,7 +135,7 @@
       })
       .catch((err) => {
         Swal.fire({
-          icon: 'question',
+          icon: 'error',
           title: '서버 요청 오류',
           width: 400,
           height: 320,
