--- a/app/src/main/resources/static/register/hospitals-list.html
+++ b/app/src/main/resources/static/register/hospitals-list.html
@@ -328,6 +328,7 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/vendor/chart.js/chart.umd.js"></script>
@@ -441,7 +442,14 @@
         renderDataList(dataList);
       })
       .catch((err) => {
-        alert('서버 요청 오류!');
+        Swal.fire({
+          icon: 'error',
+          title: '서버 요청 오류',
+          width: 400,
+          height: 320,
+          showConfirmButton: false,
+          timer: 750
+        });
         console.log(err);
       });
     // tel 변수
@@ -493,7 +501,14 @@
     fileInput.addEventListener('change', function(e) {
       let files = e.target.files;
       if (files.length > 3) {
-        alert('파일 첨부 개수는 3개 이상이 될 수 없습니다.');
+        Swal.fire({
+          icon: 'question',
+          title: '파일 첨부 개수는 3개 이상이 될 수 없습니다.',
+          width: 400,
+          height: 320,
+          showConfirmButton: false,
+          timer: 750
+        });
         // 최대 첨부 가능한 파일 개수를 넘어서는 경우, 파일 선택을 초기화합니다.
         fileInput.value = '';
       }
@@ -506,12 +521,26 @@
       const pwdInput = document.querySelector('#hosPwd');
 
        if(hosNameInput.value == ""){
-        alert('병원명을 입력해주세요.');
+        Swal.fire({
+          icon: 'question',
+          title: '병원명을 입력해주세요.',
+          width: 400,
+          height: 320,
+          showConfirmButton: false,
+          timer: 750
+        });
         return false;
       }
 
       if(pwdInput.value == "" || pwdInput.value.length < 4){
-        alert('비밀번호를 4자 이상 입력해주세요.');
+        Swal.fire({
+          icon: 'error',
+          title: '비밀번호를 4자 이상 입력해주세요.',
+          width: 400,
+          height: 320,
+          showConfirmButton: false,
+          timer: 750
+        });
         return false;
       }
       if (hosTel.value === '' || hosTel.value.length < 7) {
