--- a/app/src/main/resources/static/register/hospitals-map.html
+++ b/app/src/main/resources/static/register/hospitals-map.html
@@ -266,6 +266,7 @@
     ></a>
 
     <!-- Vendor JS Files -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/vendor/chart.js/chart.umd.js"></script>
@@ -393,11 +394,25 @@
                 }
               );
             } else {
-              alert("입력실패");
+              Swal.fire({
+                icon: 'error',
+                title: '입력실패',
+                width: 400,
+                height: 320,
+                showConfirmButton: false,
+                timer: 750
+              });
             }
           })
           .catch((exception) => {
-            alert("입력 중 오류 발생");
+            Swal.fire({
+              icon: 'error',
+              title: '입력 중 오류 발생',
+              width: 400,
+              height: 320,
+              showConfirmButton: false,
+              timer: 750
+            });
             console.log(exception);
           });
       } else {
