--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -712,6 +712,7 @@
     ></a>
 
     <!-- Vendor JS Files -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/vendor/chart.js/chart.umd.js"></script>
@@ -816,11 +817,25 @@
                 document.getElementById("hosSub").innerHTML = hospital.hosSub;
                 document.getElementById("hosAddr").innerHTML = hospital.hosAddr;
               } else {
-                alert("입력실패");
+                Swal.fire({
+                  icon: 'error',
+                  title: '입력실패',
+                  width: 400,
+                  height: 320,
+                  showConfirmButton: false,
+                  timer: 750
+                });
               }
             })
             .catch((exception) => {
-              alert("입력 중 오류 발생");
+              Swal.fire({
+                  icon: 'error',
+                  title: '입력 중 오류 발생',
+                  width: 400,
+                  height: 320,
+                  showConfirmButton: false,
+                  timer: 750
+                });
               console.log(exception);
             });
         } else {
@@ -1025,11 +1040,25 @@
                   });
                 });
               } else {
-                alert("입력실패");
+                Swal.fire({
+                  icon: 'error',
+                  title: '입력실패',
+                  width: 400,
+                  height: 320,
+                  showConfirmButton: false,
+                  timer: 750
+                });
               }
             })
             .catch((exception) => {
-              alert("입력 중 오류 발생");
+              Swal.fire({
+                icon: 'error',
+                title: '입력 중 오류 발생',
+                width: 400,
+                height: 320,
+                showConfirmButton: false,
+                timer: 750
+              });
               console.log(exception);
             });
         } else {
@@ -1042,10 +1071,24 @@
         let files = e.target.files;
         const checkboxes = document.querySelectorAll('input[type="checkbox"]');
         if (files.length > 3) {
-          alert("파일 첨부 개수는 3개 이상이 될 수 없습니다.");
+          Swal.fire({
+            icon: 'error',
+            title: '파일 첨부 개수는 3개 이상이 될 수 없습니다.',
+            width: 400,
+            height: 320,
+            showConfirmButton: false,
+            timer: 750
+          });
           fileInput.value = "";
         } else if (files.length + checkboxes.length > 3) {
-          alert("이미지 개수는 3개 이상이 될 수 없습니다.");
+          Swal.fire({
+            icon: 'error',
+            title: '파일 첨부 개수는 3개 이상이 될 수 없습니다.',
+            width: 400,
+            height: 320,
+            showConfirmButton: false,
+            timer: 750
+          });
           fileInput.value = "";
         }
       });
@@ -1198,7 +1241,14 @@
               scrollingModal.style.display = "block";
               document.body.classList.add("modal-open");
             } else {
-              alert("병원 비밀번호가 틀렸습니다.");
+              Swal.fire({
+                icon: 'error',
+                title: '병원 비밀번호가 틀렸습니다.',
+                width: 400,
+                height: 320,
+                showConfirmButton: false,
+                timer: 750
+              });
               passwordValidationMsg.textContent = "비밀번호가 틀립니다.";
               passwordInput.classList.remove("is-valid", "is-invalid");
               passwordInput.classList.add("is-invalid");
@@ -1250,7 +1300,14 @@
                   scrollingModal.style.display = "block";
                   document.body.classList.add("modal-open");
                 } else {
-                  alert("병원 비밀번호가 틀렸습니다.");
+                  Swal.fire({
+                    icon: 'error',
+                    title: '병원 비밀번호가 틀렸습니다.',
+                    width: 400,
+                    height: 320,
+                    showConfirmButton: false,
+                    timer: 750
+                  });
                   passwordValidationMsg.textContent = "비밀번호가 틀립니다.";
                   passwordInput.classList.remove("is-valid", "is-invalid");
                   passwordInput.classList.add("is-invalid");
