--- a/app/src/main/resources/static/register/patients-profile-auth.html
+++ b/app/src/main/resources/static/register/patients-profile-auth.html
@@ -252,6 +252,7 @@
     ></a>
 
     <!-- Vendor JS Files -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/chart.js/chart.umd.js"></script>
