--- a/app/src/main/resources/static/register/naver-signup.html
+++ b/app/src/main/resources/static/register/naver-signup.html
@@ -210,6 +210,7 @@
   </main>
 
   <!-- Vendor JS Files -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/vendor/chart.js/chart.umd.js"></script>
@@ -406,7 +407,7 @@
                 location.replace('index.html');
                 // console.log('성공:', result);
               } else {
-                alert('입력실패');
+                Swal.fire("입력실패");
                 // console.log(result.data);
               }
             })
