--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -8,6 +8,7 @@
   <title>커뮤니티 - 게시글 조회</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.min.css" integrity="sha384-L0rNJrCnvHYl8t98Pf/zOKPno2c2eBCC1X9GDb0OVk1RkRgZoWyO8QMrWns3qsz5" crossorigin="anonymous">
 
   <!-- Favicons -->
   <link href="assets/img/newlogo.png" rel="icon">
@@ -21,8 +22,6 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
@@ -290,7 +289,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.min.js" integrity="sha384-8hj5iH85BpAQvAsL5Dq9Q2fK7bZJwRswCnW8FfL+0oVzxbOaKj7yGRT6F1U6+kHJ" crossorigin="anonymous"></script>
 </body>
 
 </html>
