--- a/app/src/main/resources/static/register/doctors-community-main.html
+++ b/app/src/main/resources/static/register/doctors-community-main.html
@@ -285,9 +285,9 @@
       </div>
           
   </section>
-              <section class="section">
+              <section class="section" style="margin-bottom: 40px;">
                 <div class="row">
-                  <div class="col-lg-12" style="margin-bottom: 20px;">
+                  <div class="col-lg-12" >
                     <div class="card">
                       <div class="card-body">
                         <h5 class="card-title"><strong>커뮤니티 게시글 목록</strong></h5>
