--- a/app/src/main/resources/static/register/hospitals-list.html
+++ b/app/src/main/resources/static/register/hospitals-list.html
@@ -190,7 +190,7 @@
                   병원추가
                 </button>               
                 <h4 class="card-title" style="float: right;">
-                <input type="text" id="search-input" placeholder="병원명,주소,진료과목         🔍">
+                <input type="text" id="search-input" class="form-control" placeholder="병원정보검색">
                 </h4>
                 <table id="foo-table" class="table table-hover">
                   <thead>
