4월 29일 작업분 업로드

--- a/app/src/main/resources/static/register/doctors-records.html
+++ b/app/src/main/resources/static/register/doctors-records.html
@@ -44,6 +44,12 @@
     .carousel-item {
       transition: 1s;
     }
+    .sogyon-money {
+      width: var(--fieldWidth, 51%) !important;
+    }
+    .field__label-wrap::after {
+      width: 51% !important;
+    }
   </style>
 </head>
 
