커뮤니티/관리자페이지 UI수정

--- a/app/src/main/resources/static/register/community-write.html
+++ b/app/src/main/resources/static/register/community-write.html
@@ -175,7 +175,7 @@
               </div>
               
               <div class="text-center" style="margin-top: 20px;">
-                <button type="button" class="btn btn-primary btn-submit">저장</button>
+                <button type="button" class="btn btn-outline-secondary btn-submit">저장</button>
                 <button type="reset" class="btn btn-secondary">이전</button>
               </div>
               <br>
