--- a/app/src/main/resources/static/register/QnQ.html
+++ b/app/src/main/resources/static/register/QnQ.html
@@ -239,7 +239,7 @@
           </div>
           <div class="chat-send-cover">
             <div class="input-group mb-3">
-              <input type="text" class="form-control chat-text" placeholder="문의 사항을 입력해주세요" maxlength="32" aria-label="Recipient's username" aria-describedby="button-addon2">
+              <input type="text" class="form-control chat-text" placeholder="문의 사항을 입력해주세요" maxlength="32" aria-describedby="button-addon2" style="z-index:0 !important">
               <button class="btn btn-outline-secondary chat-btn" type="button" id="button-addon2" style="z-index:0 !important">입력</button>
             </div>
           </div>
