--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -136,7 +136,7 @@
       
     </div><!-- End Page Title -->
 
-    <section class="section">
+    <section class="section" style="margin-bottom:100px;">
       <div class="row">
         <div class="col-lg-12">
 
