--- a/app/src/main/resources/static/register/doctors-community-main.html
+++ b/app/src/main/resources/static/register/doctors-community-main.html
@@ -295,7 +295,7 @@
                           <thead>
                             <tr>
                               <!-- table 작업시에 <th><td> 갯수가 서로 일치하지 않으면 정렬 버튼 사라집니다 -->
-                              <th scope="col">번호</th>
+                             <!-- <th scope="col">번호</th>-->
                               <th scope="col" style="width:500px">제목</th>
                               <th scope="col">작성자</th>
                               <th scope="col">카테고리</th>
@@ -306,7 +306,7 @@
           
                           <tbody class="table-group-divider" id="community-list">
                             <tr>
-                              <td></td>
+                             <!-- <td></td>-->
                               <td><a href="community-view.html?no={no}"></a></td>
                               <td></td>
                               <td></td>
