--- a/app/src/main/resources/static/register/doctors-community-main.html
+++ b/app/src/main/resources/static/register/doctors-community-main.html
@@ -164,21 +164,26 @@
                   <h5 class="card-title" id="naver-logo-title" ><img src="../assets/img/naverlogo.png" style="width:180px;"></h5>
                   
                   <div class="searching">
-                    <input type="text" name="query" placeholder="검색은 초록창에서!">
-                    <button class="button">검색</button>
+                    <input type="text" class="naver-search" name="query" placeholder="">
+                    <button class="button naver-btn" type="button" id="naver-search">검색</button>
                   </div>
 
-                  <div class="input-group mb-3">
+                  <!-- <div class="input-group mb-3">
                     <button class="naver-btn btn btn-outline-secondary" type="button" id="naver-search button-addon1">Search</button>
                     <input type="text" class="form-control naver-search" placeholder="">
-                  </div>
+                  </div> -->
                  </div>
               </div>
             </div> 
             
             <style>
-              .searching{width: 500px; height: 50px; 
-                border:2px solid rgb(25,206,96);  position:relative;}
+              .searching{ 
+                height: 40px; 
+                border:2px solid rgb(25,206,96);  
+                position:relative;
+                margin-left:20px;
+                margin-right:20px;
+              }
               .button{width: 50px; height: 50px; background: rgb(25,206,90);
                 position: absolute; right: 0; top: 0; border: none; 
                 font-size: 15px; font-weight: bold; color: white;}
