--- a/app/src/main/resources/static/register/doctors-community-main.html
+++ b/app/src/main/resources/static/register/doctors-community-main.html
@@ -190,7 +190,7 @@
                 font-size: 15px; font-weight: bold; color: white;}
               
               input[name="query"]{
-                height: 35px; width: 420px;
+                height: 35px;
                 top: 5px; left: 10px; border: none; }
               input[name="query"]:focus{outline: none;} /*최신버전*/
           
