--- a/app/src/main/resources/static/register/doctors-community-main.html
+++ b/app/src/main/resources/static/register/doctors-community-main.html
@@ -43,7 +43,7 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a class="logo d-flex align-items-center">
-     
+      <img src="../register/assets/img/headerlogo-d.png">
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div>
