--- a/app/src/main/resources/static/register/community-write.html
+++ b/app/src/main/resources/static/register/community-write.html
@@ -37,8 +37,7 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a class="logo d-flex align-items-center">
-     <!--  <img src="assets/img/newlogo.png" alt=""> -->
-      <span class="d-none d-lg-block">P DC</span>
+      <img src="../register/assets/img/headerlogo-d.png">
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div>
