--- a/app/src/main/resources/static/register/doctors-profile-auth.html
+++ b/app/src/main/resources/static/register/doctors-profile-auth.html
@@ -66,8 +66,8 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
       <div class="d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
-          <span class="d-none d-lg-block">P DC</span>
+        <a class="logo d-flex align-items-center">
+          <img src="../register/assets/img/headerlogo-d.png">
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
       </div>
