--- a/app/src/main/resources/static/register/doctors-profile.html
+++ b/app/src/main/resources/static/register/doctors-profile.html
@@ -66,10 +66,8 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a class="logo d-flex align-items-center">
-     <!--  <img src="assets/img/newlogo.png" alt=""> -->
-      <span class="d-none d-lg-block">P DC</span>
-    </a>
-   
+        <img src="../register/assets/img/headerlogo-d.png">
+      </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div>
     <!-- End Logo -->
