--- a/app/src/main/resources/static/register/doctors-advices.html
+++ b/app/src/main/resources/static/register/doctors-advices.html
@@ -202,7 +202,7 @@
                     <tr>
                       <!-- table 작업시에 <th><td> 갯수가 서로 일치하지 않으면 정렬 버튼 사라집니다 -->
                       <th scope="col">답변</th>
-                      <th scope="col">번호</th>
+                      <!--<th scope="col">번호</th> -->
                       <th scope="col" class="cursor">제목</th>
                       <th scope="col">위급정도</th>
                       <th scope="col">작성자</th>
