--- a/app/src/main/resources/static/register/community-write.html
+++ b/app/src/main/resources/static/register/community-write.html
@@ -162,7 +162,7 @@
                   
               </div>
                   <div class="form-floating col-md-12 " style="margin-top: 20px;">
-                    <textarea class="form-control content"  id="floatingTextarea" style="height: 100px;" placeholder="글 내용 입력" > </textarea>
+                    <textarea class="form-control content"  id="floatingTextarea txtArea" style="height: 100px;" placeholder="글 내용 입력" > </textarea>
                   </div>
                   <div class="col-8 row g-3" style="margin-top: 10px;">
                     <form >
@@ -216,6 +216,21 @@
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <script>
+    function onTestChange() {
+        var key = window.event.keyCode;
+    
+        // If the user has pressed enter
+        if (key === 13) {
+            document.getElementById("txtArea").value = document.getElementById("txtArea").value + "\n*";
+            return false;
+        }
+        else {
+            return true;
+        }
+    }
+    </script>
 
   <!-- Vendor JS Files -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
