--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -170,7 +170,7 @@
                         
   
                 <div class="form-floating col-md-12 " style="margin-top: 20px;" >
-                  <input type="text" id="content" class="form-control content" style="height: 300px;" readonly>
+                  <textarea id="content txtArea" class="form-control content" style="height: 300px;" readonly></textarea>
                 </div>
                 <br>
               <div class="text-center" id="uptdel-btns">
@@ -272,6 +272,21 @@
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <script>
+    function onTestChange() {
+        var key = window.event.keyCode;
+    
+        // If the user has pressed enter
+        if (key === 13) {
+            document.getElementById("txtArea").value = document.getElementById("txtArea").value + "\n*";
+            return false;
+        }
+        else {
+            return true;
+        }
+    }
+    </script>
 
   <!-- Vendor JS Files -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
