--- a/app/src/main/resources/static/register/community-view.html
+++ b/app/src/main/resources/static/register/community-view.html
@@ -170,7 +170,7 @@
                         
   
                 <div class="form-floating col-md-12 " style="margin-top: 20px;" >
-                  <textarea id="content txtArea" class="form-control content" style="height: 300px;" readonly></textarea>
+                  <textarea id="content txtArea" class="form-control content" onkeydown="return onTestChange();" style="height: 300px;" readonly></textarea>
                 </div>
                 <br>
               <div class="text-center" id="uptdel-btns">
