--- a/app/src/main/resources/static/register/community-write.html
+++ b/app/src/main/resources/static/register/community-write.html
@@ -162,7 +162,7 @@
                   
               </div>
                   <div class="form-floating col-md-12 " style="margin-top: 20px;">
-                    <textarea class="form-control content"  id="floatingTextarea txtArea" onkeydown="return onTestChange();" style="height: 100px;" placeholder="글 내용 입력" > </textarea>
+                    <textarea class="form-control content"  id="txtArea" onkeydown="return onTestChange();" style="height: 100px;" placeholder="글 내용 입력" > </textarea>
                   </div>
                   <div class="col-8 row g-3" style="margin-top: 10px;">
                     <form >
