병원 상세 정보 페이지 변경

--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -182,7 +182,7 @@
         <li class="nav-item">
           <a class="nav-link" href="hospitals-view.html">
             <i class="bi bi-card-list"></i>
-            <span>내 병원 정보</span>
+            <span>병원 정보</span>
           </a>
         </li>
         <!-- End Register Page Nav -->
@@ -224,9 +224,8 @@
     <main id="main" class="main">
       <section class="section contact align-middle">
         <div class="pagetitle">
-          <h1>나의 병원 정보</h1>
           <div id="hospitalNo" class="hos-no" style="display: none"></div>
-          <div id="hosName" class="hos-name"></div>
+          <h1 id="hosName" class="hos-name"></h1>
         </div>
       </section>
 
